# md2docx

./: .gitignore  BACKWARD_COMPATIBILITY_VERIFICATION.md  BASH_ITALIC_COMMENTS_README.md  BASH_STRATEGY_IMPLEMENTATION_SUMMARY.md  BR_TAG_FEATURE.md  BR_TAG_IMPLEMENTATION_SUMMARY.md  BUG_FIX_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FINAL_SUMMARY.md  H1_PAGE_BREAK_FEATURE.md  H1_PAGE_BREAK_README.md  H1_PAGE_BREAK_SUMMARY.md  HASH_COMMENT_FIX.md  IMAGE_SIZE_FEATURE.md  IMAGE_SIZE_IMPLEMENTATION_SUMMARY.md  IMAGE_SIZE_PARAMS_README.md  NESTED_BOLD_BUG_FIX.md  NOTE_STRATEGY_IMPLEMENTATION.md  NOTE_STRATEGY_README.md  NOTE_STRATEGY_UPDATED.md  QUICK_START_RUST_BOLD.md  README.md  RUST_COMMENT_ITALIC_FEATURE.md  RUST_KEYWORD_BOLD_FEATURE.md  TASK_18_COMPLETION_SUMMARY.md  TEST_RESULT.md  WHITESPACE_PRESERVATION_FIX.md  config_with_code_processing.yaml  docker-compose.yml  prompts.md  test_bash_italic_comments.md  test_br_comprehensive.md  test_br_tag.md  test_first_h1_no_break.md  test_h1_page_break.md  test_h1_page_break_detailed.md  test_h1_with_intro.md  test_hash_comment.md  (+15 more)
benches/: benchmark_config.toml  code_block_performance.rs
deploy/: README.md  deploy.sh  production.env
docs/: API.md  CODE_BLOCK_STRATEGY_API.md  CODE_BLOCK_STRATEGY_CONFIG.md  CODE_BLOCK_STRATEGY_TUTORIAL.md  FAQ.md  HOW_TO_USE_RUST_KEYWORD_BOLD.md  NOTE_STRATEGY.md  NOTE_STRATEGY_QUICKSTART.md  NUMBERING.md  NUMBERING_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_TESTING.md  PLUGIN_DEVELOPMENT_GUIDE.md  RUST_KEYWORD_BOLD.md  RUST_STANDARD_TRAITS.md  TROUBLESHOOTING.md  rust_code.md
examples/: advanced_code_block_config.yaml  code_block_config.yaml  (+13 more)
(+116 files in other folders)
